data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1574.wast
;; 5. **Test Name: Unwinding Stack Incorrectly on Loop Exit**    **Description:** Instruct the `br_if` to incorrectly unwind the stack when a loop is exited. The `wizard_engine` should explicitly detect this with a stack-related error.    **Infinite Loop Relation:** Incorrect stack unwinding might cause the loop to re-enter erroneously, repeating indefinitely.

(assert_invalid
  (module
    (func $unwind-stack-on-loop-exit
      (loop (br_if 0 (i32.const 1) (i64.const 42)))
    )
  )
  "type mismatch"
)